Fix content getting cut off when screen size was between desktop and mobile width

--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,13 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Main CSS */
 html {
-    height: 100%;
+    /* height: 100%; */
 }
 
 body {
     display: flex;
-    height: 100%;
+    /* height: 100%; */
+    min-height: 100vh;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(52, 52, 52);
     /* background-color: rgb(250, 248, 245); */
@@ -59,9 +60,9 @@ body {
 
 .left-section {
     display: flex;
-    flex: 1;
+    flex: 0 0 40%;
     flex-direction: column;
-    width: 40%;
+    /* width: 40%; */
     height: auto;
     background-image: url(background-image.jpg);
     background-color: #20437e;
@@ -111,8 +112,9 @@ h1 {
 
 .right-section {
     display: flex;
+    flex: 1 1 60%;
     flex-direction: column;
-    width: 60%;
+    /* width: 60%; */
     height: auto;
     background-color: rgb(250, 248, 245);
 }
@@ -122,9 +124,8 @@ h1 {
     flex-direction: column;
     justify-content: end;
     gap: 10px;
-    min-height: 35%;
-    width: 90%;
-    padding: 50px 40px;
+    /* width: 90%; */
+    padding: 130px 120px 40px 40px;
     font-size: 1.4em;
     line-height: 1;
 }
